--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sass": "sass --no-source-map src/assets/scss:public/css"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@popperjs/core": "^2.11.8",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
@@ -24,12 +25,14 @@
     "react": "18.2.0",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-scroll": "^1.8.9",
     "react-syntax-highlighter": "^15.5.0",
     "scrollcue": "^2.0.0",
     "sharp": "^0.31.3",
     "swiper": "^9.1.0",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
