--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@popperjs/core": "^2.11.8",
     "animate.css": "^4.1.1",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.0",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.7",
