--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,6 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run build --if-present
+    - name : Restoring env file 
+    - run : cp /root/envBkp/.env /actions-runner/visionproduction/VisionVertex/VisionVertex/.env
     - run: pm2 restart VisionVertexFront 
