--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
         cache: 'npm'
     - run: npm i
     - run: npm run build --if-present 
-    - run: cp /root/envBkp/.env /actions-runner/visionproduction/VisionVertex/VisionVertex/.env
+    - run: cp /home/visiondev/envBkp/.env /actions-runner/visionproduction/VisionVertex/VisionVertex/.env
     - run: pm2 restart VisionVertexFront 
