--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react": "18.2.0",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.46.1",
     "react-markdown": "^9.0.1",
     "react-scroll": "^1.8.9",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^10.0.5",
     "scrollcue": "^2.0.0",
     "sharp": "^0.31.3",
     "swiper": "^9.1.0",
@@ -43,6 +45,7 @@
     "@types/progressbar.js": "^1.1.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-scroll": "^1.8.6",
     "@types/react-syntax-highlighter": "^15.5.6",
     "eslint": "8.35.0",
